--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,23 +1,56 @@
-@import "../../styles/common.scss";
+@import '../../styles/common.scss';
 
 .header-container {
-    z-index: 99;
+  z-index: 99;
+  display: flex;
+  justify-content: space-between;
+  background-color: $colormain;
+  color: $common-text-color;
+  height: 40px;
+  position: relative;
+  .languages {
     display: flex;
-    justify-content: space-between;
-    background-color: $colormain;
-    color: $common-text-color;
-    height: 40px;
-    position: relative;
-    .btn-logout {
-        color: $common-text-color;
-        line-height: 40px;
-        height: 40px;
-        padding: 0 10px;
-        &:hover {
-            background-color: darken($colormain, 5);
-        }
-        i {
-            font-size: $base-size + 1px;
-        }
+    align-items: center;
+    .welcome {
+      margin-right: 20px;
     }
+    .language-de {
+      cursor: pointer;
+      opacity: 0.2;
+      margin-left: 10px;
+      margin-right: 20px;
+      &.active {
+        opacity: 1;
+        color: #fff;
+        font-weight: 700;
+      }
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .language-en {
+      opacity: 0.2;
+      cursor: pointer;
+      &.active {
+        opacity: 1;
+        color: #fff;
+        font-weight: 700;
+      }
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .btn-logout {
+      color: $common-text-color;
+      line-height: 40px;
+      height: 40px;
+      padding: 0 10px;
+      &:hover {
+        background-color: darken($colormain, 5);
+      }
+      i {
+        font-size: $base-size + 1px;
+      }
+    }
+  }
 }
