--- a/src/containers/Homepage/HomePage.scss
+++ b/src/containers/Homepage/HomePage.scss
@@ -24,7 +24,9 @@
     opacity: 1;
   }
 }
-
+.slick-disabled {
+  display: none !important;
+}
 .section-share {
   &.section-specialty {
     background-color: #f5f5f5;
@@ -36,7 +38,7 @@
 }
 .section-share {
   height: 400px;
-  padding: 20px 0;
+
   .section-container {
     display: flex;
     flex-direction: column;
@@ -72,6 +74,7 @@
   .section-body {
     margin: 0 180px;
     .section-customize {
+      cursor: pointer;
       .bg-img {
         img {
           width: 370px;
@@ -79,7 +82,7 @@
           object-fit: cover;
           margin: 0 auto;
           &.img-doctor {
-            border: 5px solid #fff;
+            border: 5px solid #7fd2dc;
             border-radius: 50%;
             width: 200px;
             height: 200px;
