--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -20,10 +20,30 @@
         margin: 30px;
         .intro-doctor-right-top {
           font-size: 20px;
-          font-weight: 600;
+          font-weight: 800;
+          p {
+            font-weight: 400;
+            font-size: 18px;
+          }
         }
         .intro-doctor-right-bottom {
         }
+      }
+    }
+    .schedule-doctor {
+      display: flex;
+      margin-bottom: 10px;
+      background-color: #fff;
+      border-radius: 5px;
+      padding: 10px 0;
+      min-height: 200px;
+
+      .content-left {
+        width: 50%;
+      }
+      .content-right {
+        width: 50%;
+        border-left: 1px solid rgb(176, 169, 169);
       }
     }
   }
