--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -3,16 +3,25 @@
   .intro-doctor {
     display: flex;
     .intro-doctor-left {
-      width: 25%;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 20%;
+
+      .intro-doctor-left-avatar {
+        img {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+        }
+      }
+      .more-info {
+        text-align: center;
+        margin-top: 10px;
+      }
     }
     .intro-doctor-right {
-      width: 75%;
+      width: 78%;
       margin: 5px 10px 0 30px;
       .intro-doctor-right-top {
         h2 {
