--- a/src/containers/Homepage/Section/Specialty.scss
+++ b/src/containers/Homepage/Section/Specialty.scss
@@ -1,5 +1,6 @@
-.section-medical-facility {
-  margin: 20px 200px;
+.section-specialty {
+  background-color: #e9f7fe;
+  margin: 50px 200px;
   .section-header {
     display: flex;
     justify-content: space-between;
