--- a/src/containers/Homepage/HomePage.scss
+++ b/src/containers/Homepage/HomePage.scss
@@ -27,113 +27,10 @@
 .slick-disabled {
   display: none !important;
 }
-.section-share {
-  &.section-specialty {
-    background-color: #f5f5f5;
-  }
-  &.section-doctors {
-    background-color: #f5f5f5;
-    text-align: center;
-  }
-}
-.section-share {
-  height: 400px;
-
-  .section-container {
-    display: flex;
-    flex-direction: column;
-    margin: 0 200px;
-    .section-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: 60px;
-      margin-bottom: 30px;
-      padding-top: 30px;
-
-      .section-title {
-        font-size: 22px;
-        font-weight: 600;
-      }
-      .section-btn {
-        padding: 10px 15px;
-        border: none;
-        outline: none;
-        display: block;
-        background-color: #ebebeb;
-        color: black;
-        text-transform: uppercase;
-        cursor: pointer;
-        &:hover {
-          background: #f7d82f;
-          color: #fff;
-        }
-      }
-    }
-  }
-  .section-body {
-    margin: 0 180px;
-    .section-customize {
-      cursor: pointer;
-      .bg-img {
-        img {
-          width: 370px;
-          height: 200px;
-          object-fit: cover;
-          margin: 0 auto;
-          &.img-doctor {
-            border: 1px solid #7fd2dc;
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-          }
-        }
-      }
-
-      span {
-        margin-left: 10px;
-      }
-    }
-    .section-customize-doctor {
-      cursor: pointer;
-      border: 1px solid #f7d82f;
-
-      .bg-img {
-        img {
-          width: 370px;
-          height: 200px;
-          object-fit: cover;
-          margin: 0 auto;
-          &.img-doctor {
-            border: 1px solid #7fd2dc;
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-          }
-        }
-      }
-
-      span {
-        margin-left: 10px;
-      }
-    }
-  }
-}
-
-// Section ABOUT US
-.section-about-content {
-  display: flex;
-
-  .section-about-content-left {
-    width: 50%;
-  }
-  .section-about-content-right {
-    width: 50%;
-    padding: 0 20px;
-    p {
-      font-style: italic;
-      font-size: 16px;
-    }
+//body-container
+.body-container {
+  .MedicalFacility {
+    margin-bottom: 20px;
   }
 }
 
