--- a/src/containers/Homepage/Section/Doctors.scss
+++ b/src/containers/Homepage/Section/Doctors.scss
@@ -19,7 +19,7 @@
       .section-customize-doctor {
         text-align: center;
         cursor: pointer;
-        border: 1px solid #7fd2dc;
+        border: 1px solid #bfe1e56a;
         margin: 5px;
 
         .bg-img {
