--- a/src/containers/Homepage/Section/MedicalFacility.scss
+++ b/src/containers/Homepage/Section/MedicalFacility.scss
@@ -15,6 +15,9 @@
     }
   }
   .section-body {
+    &:hover {
+      box-shadow: 0 0 10px 0 #bfe1e56a;
+    }
     padding: 10px 0;
     .section-customize {
       cursor: pointer;
