--- a/src/containers/Homepage/Section/MedicalFacility.scss
+++ b/src/containers/Homepage/Section/MedicalFacility.scss
@@ -37,3 +37,14 @@
     }
   }
 }
+
+// Responsive
+
+@media (max-width: 1550px) {
+  .section-medical-facility {
+    margin: 20px 20px;
+  }
+  h3 {
+    font-size: 16px !important;
+  }
+}
