--- a/src/containers/Homepage/Section/Specialty.scss
+++ b/src/containers/Homepage/Section/Specialty.scss
@@ -17,6 +17,7 @@
   }
   .section-body {
     padding: 10px 0;
+    margin: 5px !important;
     .section-customize {
       cursor: pointer;
       .bg-img {
@@ -33,5 +34,18 @@
         margin-left: 10px;
       }
     }
+  }
+}
+
+// Responsive
+@media (max-width: 1550px) {
+  .section-specialty {
+    margin: 30px 20px;
+  }
+  h3 {
+    font-size: 16px !important;
+  }
+  .section-body {
+    margin: 5px !important;
   }
 }
