--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -51,3 +51,38 @@
     }
   }
 }
+
+// Responsive
+@media (max-width: 1550px) {
+  .detail-specialty-container {
+    .description-specialty-body {
+      margin: 50px 20px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .detail-specialty-container {
+    h2 {
+      font-size: 16px !important;
+    }
+    .description-specialty-body {
+      margin: 50px 20px;
+    }
+    .each-doctor {
+      flex-direction: column;
+      .each-doctor-left {
+        width: 100%;
+        padding-left: 20px;
+        .doctor-extra-info {
+          margin-left: 0;
+          margin-right: 0;
+        }
+      }
+      .each-doctor-right {
+        width: 100%;
+        border-left: none;
+      }
+    }
+  }
+}
